test/failing/duptags.trunnel

struct x {

   u8 a;
   union u[a] {
     3 : u16 y;
     3 : u32 z;
   };
}